Version 5.6.0 (TBD)
    Added new user interface `enable` and `disable` methods #TINY-6397
    Added new `closest` formatter API to get the closest matching selection format from a set of formats. #TINY-6479
    Fixed `getContent` with text format returning a new line when the editor is empty #TINY-6281
    Fixed the `visualchars` plugin causing the editor to steal focus when initialized #TINY-6282
    Fixed `fullpage` plugin altering text content in `editor.getContent()` #TINY-6541
    Fixed font size keywords such as `medium` not displaying correctly in font size menus #TINY-6291
    Fixed some incorrect types in the new TypeScript declaration file #TINY-6413
Version 5.5.1 (TBD)
    Fixed pressing the down key near the end of a document incorrectly raising an exception #TINY-6471
    Fixed incorrect Typescript types for the `Tools` API #TINY-6475
Version 5.5.0 (2020-09-29)
    Added a TypeScript declaration file to the bundle output for TinyMCE core #TINY-3785
    Added new `table_column_resizing` setting to control how table columns are resized when using the resize bars #TINY-6001
    Added the ability to remove images on a failed upload using the `images_upload_handler` failure callback #TINY-6011
    Added `hasPlugin` function to the editor API to determine if a plugin exists or not #TINY-766
    Added new `ToggleToolbarDrawer` command and query state handler to allow the toolbar drawer to be programmatically toggled and the toggle state to be checked #TINY-6032
    Added the ability to use `colgroup` elements in tables #TINY-6050
    Added a new setting `table_use_colgroups` for toggling whether colgroups are used in new tables #TINY-6050
    Added the ability to delete and navigate HTML media elements without the `media` plugin #TINY-4211
    Added `fullscreen_native` setting to the `fullscreen` plugin to enable use of the entire monitor #TINY-6284