@@ -1,4 +1,5 @@
 Version 5.6.0 (TBD)
+    Added new `format_empty_lines` setting to control if empty lines are formatted in a ranged selection #TINY-6483
     Added new user interface `enable` and `disable` methods #TINY-6397
     Added new `closest` formatter API to get the closest matching selection format from a set of formats. #TINY-6479
     Fixed `getContent` with text format returning a new line when the editor is empty #TINY-6281
